# musicplayer

./: .flaskenv  .gitignore  README.md  setup.cfg
etc/: config.ini.example
musicplayer/: app.py  factory.py  player.py  song.py  songdb.py  utils.py
musicplayer/templates/: index.j2
