[metadata]
name = musicplayer
version = attr: musicplayer.__init__.__version__
description = Simple music player
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=CommonMark
author = Matt Ullman
author_email = static@staticfox.net

[options]
include_package_data = True
python_requires = >=3.7.0
zip_safe = False
install_requires =
  eyeD3==0.9.5
  Flask==1.1.1
  python-dotenv==0.10.3
  pytz==2020.4

[options.extras_require]
dev =
  flake8==3.7.9

[flake8]
max-line-length = 120
